--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "homepage": "http://github.com/Estina/Tests",
     "type": "library",
     "require": {
-        "php": ">=5.3.0"
+        "php"                           : ">=5.3.0",
+        "phpunit/phpunit"               : "3.7.*"
     },
     "autoload": {
         "psr-0": { "Estina\\Tests": "" }
