--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "library",
     "require": {
         "php"                           : ">=5.3.0",
-        "phpunit/phpunit"               : "3.7.*"
+        "phpunit/phpunit"               : "4.1.*@-dev"
     },
     "autoload": {
         "psr-0": { "Estina\\Tests": "" }
