--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "homepage": "http://github.com/Estina/Tests",
     "type": "library",
     "require": {
-        "php"                           : ">=5.3.0",
-        "phpunit/phpunit"               : "~4.1"
+        "php"                           : ">=5.3.0"
     },
     "autoload": {
         "psr-0": { "Estina\\Tests": "" }
